# DataSystemPy3

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  quicklook.py  run_system.py  run_system.sh  todo.txt
Config/: client.json  system.cfg  system.json  system_config.toml  system_legacy.cfg
config/: client.json  client.json.example  client_example.json  example_client.json  example_system.json  fpga.json  system.json  system.json.example  system_example.json  thermistors.csv
docs/: Config.md  ConfigFiles.md  Configuration.md  Hardware.md  InstrumentSetup.md  README.md  Setup.md  User Manual.md  UserGuide.md
hammr/: create_log.py  datastructures.py  filepaths.py  fpga.py  genericclient.py  genericparser.py  genericserver.py  instrumentparsers.py  instruments.py  masterclient.py  masterserver.py  motorcontrol.py  parser.py  parsers.py  run_motor.py  utils.py
hammr/tools/: run_motor.py  send_config.py  test_fpga.py  test_thermistors.py
helpers/: test_fpga.py  test_thermistors.py  thermistors.py
l0a/: create_l1a.py  datastructures.py  readers.py
l0b/: looks.py  readers.py
notebooks/: create_l1a.ipynb  read_l0b.ipynb
processing/l0a/: create_l0b.py  datastructures.py  makemeta.py  readers.py
processing/l0b/: gps_reader.py  looks.py  quicklooks.py  rad_reader.py  readergps.py  readerrad.py  readerthm.py  thm_reader.py
scripts/: L0a_quicklook.py  L0b_quicklook.py  create_l0b.py  create_l1a.py  init_acq_folders.py  makemeta.py  ping_thermistors.py  quicklook.py
src/: instruments.py  masterServer.py  run_hammr.py  run_scripts.py
(+20 files in other folders)
