[project]
name = "datasystempy3"
version = "0.1.0"
description = "HAMMR data acquisition system."
readme = "docs/README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.3",
    "pyserial>=3.5",
    "pywin32>=310 ; sys_platform == 'win32'" ,
    "tables>=3.10.2",
    "twisted>=25.5.0",
    "processL0a",
    "processL0b",
]

[tool.uv.sources]
processL0a = {workspace = true}
processL0b = {workspace = true}

[tool.uv.workspace]
members = ['packages/*']

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
